# SeaBattle-SFML

./: .gitignore  Button.cpp  Button.h  Button.hpp  CMakeLists.txt  Field.cpp  Field.h  Field.hpp  Interface.cpp  Interface.h  Interface.hpp  Makefile  Mechanics.cpp  Mechanics.h  Mechanics.hpp  README.md  READMEen.md  Ship.cpp  Ship.h  Ship.hpp  main.cpp  settings.cpp  settings.h  sfml-app
.github/workflows/: release.yml
GameFiles/: main.cpp
GameFiles/app_data/locale/de/LC_MESSAGES/: de_DE.mo  de_DE.po
GameFiles/app_data/locale/en/LC_MESSAGES/: en_US.mo  en_US.po
GameFiles/app_data/locale/fr/LC_MESSAGES/: fr_FR.mo  fr_FR.po
GameFiles/source/Elements/: Field.cpp  Field.hpp  Ship.cpp  Ship.hpp
GameFiles/source/Interface/: Gameplay.cpp  Gameplay.hpp  Interface.cpp  Interface.hpp  settings.cpp  settings.hpp
GameFiles/source/Managers/: FileIOManager.cpp  FileIOManager.hpp  Localizer.cpp  Localizer.hpp  TextureManager.cpp  TextureManager.hpp  Timer.cpp  Timer.hpp
GameFiles/source/Widgets/: Button.cpp  Button.hpp  DropDownList.cpp  DropDownList.hpp
Managers/: FileIOManager.cpp  FileIOManager.hpp  Timer.hpp
data/: records.ltx
